--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -3,7 +3,7 @@
     "info": {
       "title": "Uptick Chain - Legacy REST and gRPC Gateway docs",
       "description": "A REST interface for state queries, legacy transactions",
-      "version": "0.2.1"
+      "version": "0.2.7"
     },
     "apis": [
       {
@@ -62,6 +62,30 @@
         "operationIds": {
           "rename": {
             "Params": "StakingParams"
+          }
+        }
+      },
+      {
+        "url": "./tmp-swagger-gen/ibc/applications/transfer/v1/query.swagger.json",
+        "operationIds": {
+          "rename": {
+            "Params": "ibcTransferParams"
+          }
+        }
+      },
+      {
+        "url": "./tmp-swagger-gen/ibc/applications/nft_transfer/v1/query.swagger.json",
+        "operationIds": {
+          "rename": {
+            "Params": "ibcNFTTransferParams"
+          }
+        }
+      },
+      {
+        "url": "./tmp-swagger-gen/uptick/collection/v1/query.swagger.json",
+        "operationIds": {
+          "rename": {
+            "Params": "collectionParams"
           }
         }
       }
