add the main function for v0.2.15 1.ics721 of v1.1.3-ibc-v5.3.2 2.natvie cosmos nft <=> evm erc721 nft

--- a/networks/local/uptick/Dockerfile
+++ b/networks/local/uptick/Dockerfile
@@ -1,4 +1,5 @@
-FROM golang:stretch as build-env
+# FROM golang:stretch as build-env
+FROM golang:1.20-bullseye as build-env
 
 # Install minimum necessary dependencies
 ENV PACKAGES curl make git libc-dev bash gcc
@@ -12,10 +13,10 @@ WORKDIR /go/src/github.com/UptickNetwork/uptick
 COPY . .
 
 # build Ethermint
-RUN make build-linux
+RUN make build
 
 # Final image
-FROM golang:1.17 as final
+FROM golang:1.20-bullseye as final
 
 WORKDIR /
 
