--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,52 +3,52 @@ version: '3'
 services:
   node0:
     container_name: upticknode0
-    image: "uptick/node"
+    image: "xuxinai2002/node:v0.1"
     ports:
       - "26656-26657:26656-26657"
     volumes:
-      - ./build/node0/uptickd:/uptick:Z
+      - ./localnet-setup/node0/uptickd:/data-dir
     command:
-      - /uptickd start --home /uptick
+      - /start-docker.sh
     networks:
       localnet:
         ipv4_address: 192.167.10.2
 
   node1:
     container_name: upticknode1
-    image: "uptick/node"
+    image: "xuxinai2002/node:v0.1"
     ports:
       - "26659-26660:26656-26657"
     volumes:
-      - ./build/node1/uptickd:/uptick:Z
+      - ./localnet-setup/node1/uptickd:/data-dir
     command:
-      - /uptickd start --home /uptick
+      - /start-docker.sh
     networks:
       localnet:
         ipv4_address: 192.167.10.3
 
   node2:
     container_name: upticknode2
-    image: "uptick/node"
+    image: "xuxinai2002/node:v0.1"
     ports:
       - "26661-26662:26656-26657"
     volumes:
-      - ./build/node2/uptickd:/uptick:Z
+      - ./localnet-setup/node2/uptickd:/data-dir
     command:
-      - /uptickd start --home /uptick
+      - /start-docker.sh
     networks:
       localnet:
         ipv4_address: 192.167.10.4
 
   node3:
     container_name: upticknode3
-    image: "uptick/node"
+    image: "xuxinai2002/node:v0.1"
     ports:
       - "26663-26664:26656-26657"
     volumes:
-      - ./build/node3/uptickd:/uptick:Z
+      - ./localnet-setup/node3/uptickd:/data-dir
     command:
-      - /uptickd start --home /uptick
+      - /start-docker.sh
     networks:
       localnet:
         ipv4_address: 192.167.10.5
