--- a/networks/local/Makefile
+++ b/networks/local/Makefile
@@ -1,4 +1,4 @@
 all:
-	docker build --no-cache --tag xuxinai2002/node:v0.2 ../.. -f uptick/Dockerfile
+	docker build --no-cache --tag uptick/node:v0.2 ../.. -f uptick/Dockerfile
 
 .PHONY: all
