Update Cosmos SDK to v0.50.x

--- a/config.yml
+++ b/config.yml
@@ -1,39 +1,49 @@
+version: 1
+build:
+  binary: uptickd
+  proto:
+    path: proto
+    third_party_paths:
+    - third_party/proto
+    - proto_vendor
 accounts:
-  - name: alice
-    coins: [ "100000000uatom", "100000000000000000000auptick" ]
-  - name: bob
-    coins: [ "5000000000000auptick" ]
-validator:
-  name: alice
-  staked: "100000000000000000000auptick"
+- name: alice
+  coins:
+  - 100000000uatom
+  - 100000000000000000000auptick
+- name: bob
+  coins:
+  - 5000000000000auptick
 faucet:
   name: bob
-  coins: [ "10auptick" ]
-build:
-  binary: "uptickd"
-init:
-  home: "$HOME/.uptickd"
-  app:
-    evm-rpc:
-      address: "0.0.0.0:8545"     # change the JSON-RPC address and port
-      ws-address: "0.0.0.0:8546"  # change the JSON-RPC websocket address and port
+  coins:
+  - 10auptick
+  host: 0.0.0.0:4500
 genesis:
-  chain_id: "uptick_7777-1"
   app_state:
-    staking:
-      params:
-        bond_denom: "auptick"
-    mint:
-      params:
-        mint_denom: "auptick"
     crisis:
       constant_fee:
-        denom: "auptick"
+        denom: auptick
+    evm:
+      params:
+        evm_denom: auptick
     gov:
       deposit_params:
         min_deposit:
-          - amount: "10000000"
-            denom: "auptick"
-    evm:
+        - amount: "10000000"
+          denom: auptick
+    mint:
       params:
-        evm_denom: "auptick"
+        mint_denom: auptick
+    staking:
+      params:
+        bond_denom: auptick
+  chain_id: uptick_7777-1
+validators:
+- name: alice
+  bonded: 100000000000000000000auptick
+  app:
+    evm-rpc:
+      address: 0.0.0.0:8545
+      ws-address: 0.0.0.0:8546
+  home: $HOME/.uptickd
